# abstractboardgames

./: .gitignore  README.org  language_description.txt  project_description.org  requirements.txt
Agents/: Agents.py  README.org  agent.py  alphabeta_agent.py  browser_gui_agent.py  mcts_agent.py  neural_network_model.py  random_agent.py
Agents/BrowserAgent/: AgentService.py
Agents/BrowserAgent/BrowserCode/: chessService.js  main.css  main.js
BaraEhvAProfaTraina/: MinMaxAI.py  main.py
BrowserAgent/: AgentService.py
BrowserAgent/BrowserCode/: chessService.js  main.html  main.js
GameEngine/: CPPGameEngine.py  GameEngine.py  GameEngineType.py  PythonGameEngine.py  README.org
GamePlayingAgent/: agent.py  coach.py  main.py  mcts.py  random_agent.py  tournament.py  tui_agent.py
GamePlayingAgent/breakthrough/: breakthrough_agent.py  breakthrough_agent_alphabeta.py  breakthrough_agent_mcts.py  model.py
Learning/: README.org  coach.py  play.py  train.py
PythonParser/: GameEngine.py  ParserReadme.txt  chess.game  language_description.txt  main.py
PythonParser/IntegerExpression/: Evaluator.py  Preprocessor.py
PythonParser/NewFolderStruct/: Agents.py  GameEngine.py  MinMaxAI.py  commands.txt
PythonParser/NewFolderStruct/DebugInfo/: ParsingInfo.txt  RegexInfo.txt
PythonParser/NewFolderStruct/Lexer/: Lexer.py  TokenTypes.py
PythonParser/NewFolderStruct/Parser/: ASTType.py  Parser.py  demo1.game
PythonParser/NewFolderStruct/Parser/RegexParser/: ASTType.py  Parser.py
PythonParser/NewFolderStruct/StateMachine/: Main.py  NfaToDfa.py  StateMachineGenerator.py  Types.py
PythonParser/NewFolderStruct/TestFiles/: MediumBreakThrough.game  SimpleBreakThrough.game  chess.game  demo1.game  demo2.game  demo3.game  e.txt  lexer.test
PythonParser/Parser/: ASTType.py  ASTType2.py  Parser.py  Parser2.py  ParserType.py  languageDescription.txt
PythonParser/Parser/IntegerExpressionParser/: ASTType.py  IntegerExpressionDescription.txt  Parser.py
PythonParser/Parser/RegexParser/: ASTType.py  Parser.py
PythonParser/RegexParser/: NfaToDfa.py  Parser.py  StateMachine2.py  StateMachineGenerator2.py  main.py
PythonParser/StateMachine/: StateMachine.py  StateMachineGenerator.py
PythonParser/TestFiles/: BreakThrough.game  MediumBreakThrough.game  SimpleGame.game  chess.game  demo1.game
cpp/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.org
cpp/games/: breakthrough.game  breakthrough_small.game  breakthrough_tiny.game  chess.game  chess_small.game
cpp/games/breakthrough/: breakthrough.game  breakthrough_small.game  breakthrough_tiny.game  predicates.cpp  predicates.hpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  variables.hpp
cpp/games/chess/: chess.game  predicates.cpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  terminal_conditions.hpp  variables.cpp  variables.hpp
cpp/games/connect4/: connect4.game  predicates.cpp  predicates.hpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  terminal_conditions.hpp  variables.hpp
cpp/games/tictactoe/: predicates.cpp  predicates.hpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  terminal_conditions.hpp  tictactoe.game  variables.cpp
cpp/python_bindings/: CMakeLists.txt  python_bindings.cpp  test.py
cpp/python_interface/: CMakeLists.txt  py_interface.cpp  test.py
cpp/src/: flatmc.cpp  main.cpp  perft.cpp
cpp/src/actions/: predicates.cpp  predicates.hpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  terminal_conditions.hpp  variables.cpp  variables.hpp
cpp/src/environment/: environment.cpp  environment.hpp
cpp/src/parsing/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
cpp/src/state_machines/: dfa.cpp  dfa.hpp  fa_tools.cpp  fa_tools.hpp  nfa.cpp  nfa.hpp
cpp/src/visitors/: macro_visitor.cpp  macro_visitor.hpp  nfa_visitor.cpp  nfa_visitor.hpp  print_visitor.cpp  print_visitor.hpp  visitor.hpp
src/: ast.cpp  ast.hpp  dfa.cpp  dfa.hpp  environment.cpp  environment.hpp  fa_tools.cpp  fa_tools.hpp  language_description.txt  lexer.cpp  lexer.hpp  nfa.cpp  nfa.hpp  nfa_visitor.cpp  nfa_visitor.hpp  parser.cpp  parser.hpp  predicates.cpp  predicates.hpp  print_visitor.cpp  print_visitor.hpp  side_effects.cpp  side_effects.hpp  terminal_conditions.cpp  terminal_conditions.hpp  variables.cpp  variables.hpp  visitor.hpp
